change to gugudan

--- a/react/react-webgame/lecture/index.html
+++ b/react/react-webgame/lecture/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </head>
   <body>
-    <div id="root"></div> <!-- 결과: <div id='root'><button>Like</button></div > -->
+    <div id="root"></div>
     <script type="text/babel">
       const e = React.createElement;
 
