UPDATE: Lotto using class

--- a/react/react-webgame/lecture/16_Lotto/index.html
+++ b/react/react-webgame/lecture/16_Lotto/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>로또!</title>
+        <title>로또추첨기</title>
         <style>
             .ball {
                 display: inline-block;
